# image-resizer-nautilus

./: .gitingore  MANIFEST.in  Makefile  README.md  build-deb.sh  build-rpm.sh  build_packages.sh  install.sh  pyproject.toml  requirements.txt  setup.py  test_package.sh  uninstall.sh
packaging/debian/: control  copyright  install  postinst  postrm  rules
packaging/rpm/: rpm-build.sh
rpm-build/RPMS/noarch/: image-resizer-nautilus-1.0.0-3.fc43.noarch.rpm
rpm-build/SPECS/: image-resizer-nautilus.spec
rpm-build/SRPMS/: image-resizer-nautilus-1.0.0-3.fc43.src.rpm
src/image_resizer_nautilus/: __init__.py  extension_setup.py  image_resizer.py  nautilus_extension.py  uninstall.py
src/image_resizer_nautilus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
