[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-resizer-nautilus"
version = "1.0.0"
description = "Nautilus extension for resizing images with right-click menu"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "GPL-3.0-only"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GNOME",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment :: GNOME",
]
keywords = ["nautilus", "extension", "image", "resize"]
requires-python = ">=3.6"
dependencies = [
    "PyGObject>=3.38.0",
]

[project.optional-dependencies]
dev = ["build", "twine", "wheel"]

[project.scripts]
image-resizer-gui = "image_resizer_nautilus.image_resizer:main"
image-resizer-setup = "image_resizer_nautilus.extension_setup:main"
image-resizer-uninstall = "image_resizer_nautilus.uninstall:main"

[project.urls]
Homepage = "https://github.com/yourusername/image-resizer-nautilus"

[tool.setuptools]
packages = {find = {where = ["src"]}}